Refactoring hardcoded logic from Anki integration into note classes